Allow disabling CoW detection

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1040,6 +1040,7 @@
     <addaction name="separator"/>
     <addaction name="actionUse_O_DIRECT"/>
     <addaction name="actionFlush_Pagecache"/>
+    <addaction name="actionCoW_detection"/>
    </widget>
    <widget class="QMenu" name="menuProfile">
     <property name="title">
@@ -1289,6 +1290,17 @@
    </property>
    <property name="text">
     <string>Use O_DIRECT</string>
+   </property>
+  </action>
+  <action name="actionCoW_detection">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>CoW detection</string>
    </property>
   </action>
  </widget>
